# rdf4j-mcp

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: setup-guide.md
examples/: README.md  demo_basic.py  demo_exploration.py  demo_sparql_queries.py  sample_data.ttl
src/rdf4j_mcp/: __init__.py  config.py  prompts.py  resources.py  server.py  tools.py
src/rdf4j_mcp/backends/: __init__.py  base.py  local.py  remote.py
src/rdf4j_mcp/prompts/: __init__.py  prompts.py
src/rdf4j_mcp/resources/: __init__.py  resources.py
src/rdf4j_mcp/tools/: __init__.py  explore.py  metadata.py  query.py
tests/: __init__.py  test_cli_args.py  test_config.py  test_local_backend.py  test_server.py
