[project]
name = "rdf4j-mcp"
version = "0.1.0"
description = "MCP server for RDF4J integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp<3",
]

[project.scripts]
rdf4j-mcp = "rdf4j_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdf4j_mcp"]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/rdf4j_mcp/server.py" = ["E402"]  # Module imports after mcp initialization

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["rdf4j_mcp.tools", "rdf4j_mcp.prompts", "rdf4j_mcp.resources"]
disable_error_code = ["misc"]  # Allow untyped decorators from fastmcp
